# KDSource

./: CMakeLists.txt  condanotes.txt
docs/examples/: Test_McStas_MPI.ipynb  Verification.ipynb  Verification_epan.ipynb  Verification_surfcirc.ipynb  Verification_time.ipynb  Verification_tophat.ipynb
mcstas/contrib/: KDSource.comp
python/: pyproject.toml  setup.py
src/kdsource/: utils.c
src/kdtool/: resample.c
src/tripolistock/: stockmcpl.c
tests/: CMakeLists.txt
